<resources>
    <string name="app_name">PixelArt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pixel Art</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="menu_new">NEW</string>
    <string name="menu_save">SAVE</string>
    <string name="menu_load">LOAD</string>
    <string name="menu_save_as_jpg">SAVE to JPG</string>
    <string name="menu_settings">SETTINGS</string>
</resources>
