<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_new"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_new" />
        <item
            android:id="@+id/nav_save"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_save" />
        <item
            android:id="@+id/nav_load"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_load" />
        <item
            android:id="@+id/nav_saveAsJPG"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_save_as_jpg" />
    </group>

    <item android:title="Others">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_settings" />
        </menu>
    </item>

</menu>
